--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +30,26 @@ jobs:
 
       - name: Run tests
         run: npm test
+        working-directory: inatel-app
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Change directory to inatel-app
+        run: cd inatel-app
+
+      - name: Install dependencies
+        run: npm install
         working-directory: inatel-app
 
       - name: Build project
